# python-web-server

./: README.md  pyproject.toml
server/: server.py
src/: __init__.py  custom_types.py  exceptions.py  http_requests.py
src/server/: custom_types.py  http_requests.py  server.py
tests/: test_http_requests.py
